# voyager_explorer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  justfile  lcov.info  rustfmt.toml  tarpaulin-report.html  test_error_size.rs
.github/workflows/: ci.yml
benches/: audio_seek.rs
docs/: audio_playback_design.md  refactoring_progress.md  testing_without_audio.md  ultrathink_summary.md
githooks/: pre-commit
proptest-regressions/: sstv.txt
research/: synthetic_audio_fixtures.md
specs/: continue-work-prompt.md  implementation.md  milestone_6_design.md
src/: analysis.rs  app.rs  audio.rs  audio_state.rs  batch.rs  catalog.rs  cli.rs  config.rs  error.rs  image_output.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  presets.rs  session.rs  sstv.rs  test_fixtures.rs  utils.rs
src/analysis/: classify.rs  font.rs  mod.rs  segment.rs  spectrogram.rs  stats.rs  sync.rs
src/services/: audio.rs  batch.rs  decoder.rs  mod.rs  playback.rs
src/ui/: batch.rs  controls.rs  mod.rs  spectrum.rs  theme.rs  waveform.rs
tests/: audio_playback_tests.rs  color_decoding_tests.rs  image_audio_roundtrip_tests.rs  integration_tests.rs
