[package]
name = "voyager_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = [
  "default",
] }
egui = "0.32.0"

egui_extras = { version = "0.32.0", features = [
  "default",
  "all_loaders",
] }

env_logger = { version = "0.11", default-features = false, features = [
  "auto-color",
  "humantime",
] }
hound = "3.5.1"

image = { version = "0.25", features = [
  "jpeg",
  "png",
] }
realfft = { version = "3.5.0", features = ["avx", "neon", "sse", "wasm_simd"] }
rfd = "0.15.4"
rodio = "0.21.1"
