[package]
name = "voyager_explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voyager_explorer"
path = "src/main.rs"

[lib]
name = "voyager_explorer"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.33", features = [
  "default",
] }
egui = "0.33"

egui_extras = { version = "0.33", features = [
  "default",
  "all_loaders",
] }

env_logger = { version = "0.11", default-features = false, features = [
  "auto-color",
  "humantime",
] }
hound = "3.5.1"

image = { version = "0.25", features = [
  "jpeg",
  "png",
] }
realfft = { version = "3.5.0", features = ["avx", "neon", "sse", "wasm_simd"] }
rfd = "0.15.4"
rodio = { version = "0.21.1", optional = true, default-features = false, features = ["playback"] }

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["audio_playback"]
audio_playback = ["rodio"]
test_fixtures = []  # Enable synthetic audio generation for testing
